ecmascript/parser/tests/test262-error-references/fail/c045e273186c0644.js.stderr
error: TS1005
 --> $DIR/tests/test262-parser/fail/c045e273186c0644.js:1:11
  |
1 | ({a: 0, b = 0});
  |           ^

